-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.2.0-beta1
-
None
-
OS X 10.9.2, Xcode 5.1.1, creator master branch with a shadow build (qmake), qt 5.3.0
-
9b9814fd7209c3e06ae3481c210fbc60e0e179e6, 272176ca0b9c0315f1b62dfba80e11cbb6e098b6
Both the qbs plugin for creator and the stand-alone executable that gets build when building creator do not work on OS X. During plug-in loading the following happens:
/Users/erik/dev/builds/creator-master-qt5.3/bin/Qt Creator.app/Contents/PlugIns/libQbsProjectManager_debug.dylib: Cannot load library /Users/erik/dev/builds/creator-master-qt5.3/bin/Qt Creator.app/Contents/PlugIns/libQbsProjectManager_debug.dylib: (dlopen(/Users/erik/dev/builds/creator-master-qt5.3/bin/Qt Creator.app/Contents/PlugIns/libQbsProjectManager_debug.dylib, 5): Library not loaded: @rpath/libqbscore.1.dylib Referenced from: /Users/erik/dev/builds/creator-master-qt5.3/bin/Qt Creator.app/Contents/PlugIns/libQbsProjectManager_debug.dylib Reason: image not found)
The stand-alone executable says:
WARNING: Plugin path '/Users/erik/dev/builds/creator-master-qt5.3/bin/Qt Creator.app/Contents/lib/qbs/plugins' does not exist. No build graph exists yet for this configuration. WARNING: Search path '/Users/erik/dev/builds/creator-master-qt5.3/bin/Qt Creator.app/Contents/share/qbs' does not exist. Resolving project for configuration qt53-install-debug ERROR: /Users/erik/dev/creator/master/qtcreator.qbs:1:8 import qbs not found