Command-line frontend: Make plugin and search paths configurable.

Projects embedding qbs might put these somewhere else.

Task-number: QTCREATORBUG-12473
Change-Id: I13e1a1843586501bb3e17a314ccd11af6c25ee43
Reviewed-by: Jake Petroules <jake.petroules@petroules.com>
Reviewed-by: Christian Kandeler <christian.kandeler@digia.com>